# Project_533

./: .travis.yml  LICENSE.txt  README.md  demo.ipynb  main.py  pyproject.toml  requirements.txt  setup.py  test_player.py  test_util.py
Board/: board.py
Game/: game.py
Player/: player.py
Player/.ipynb_checkpoints/: player-checkpoint.py
SnakesAndLadders/: snakesandladders.py
Test/: .coverage  test_board.py  test_game.py  test_player.py  test_snakes_ladders.py  test_util.py
Utility/: utility.py
Utility/.ipynb_checkpoints/: utility-checkpoint.py
test_cases/: test_game.py  test_player.py
test_cases/.ipynb_checkpoints/: test_board-checkpoint.py  test_snakeandladdder-checkpoint.py
